--- a/dot_vscode-server/private_data/private_Machine/settings.json
+++ b/dot_vscode-server/private_data/private_Machine/settings.json
@@ -22,7 +22,10 @@
     ],
     "python.defaultInterpreterPath": ".venv/bin/python",
     "python.formatting.provider": "black",
+    "python.formatting.blackPath": ".venv/bin/black",
     "python.linting.flake8Enabled": true,
+    "python.linting.flake8Path": ".venv/bin/flake8",
     "python.linting.mypyEnabled": true,
+    "python.linting.mypyPath": ".venv/bin/mypy",
     "python.analysis.typeCheckingMode": "basic"
 }
