--- a/dot_vscode-server/private_data/private_Machine/settings.json
+++ b/dot_vscode-server/private_data/private_Machine/settings.json
@@ -22,6 +22,11 @@
     ],
     "python.defaultInterpreterPath": ".venv/bin/python",
     "python.formatting.provider": "black",
+    "python.formatting.blackPath": ".venv/bin/black",
+    "python.formatting.blackArgs": [
+        "--line-length",
+        "119"
+    ],
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Path": ".venv/bin/flake8",
     "python.linting.flake8Args": [
@@ -30,10 +35,11 @@
         "119",
         "--max-complexity=20"
     ],
-    "python.analysis.typeCheckingMode": "basic",
 
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.black-formatter",
-        "editor.formatOnSave": true
-    }
+    // "[python]": {
+    //    "editor.defaultFormatter": "ms-python.black-formatter",
+    //    "editor.formatOnSave": true
+    //}
+
+    "python.analysis.typeCheckingMode": "basic"
 }
