--- a/dot_vscode-server/private_data/private_Machine/settings.json
+++ b/dot_vscode-server/private_data/private_Machine/settings.json
@@ -34,12 +34,7 @@
     "python.linting.flake8Path": "${workspaceFolder}/.venv/bin/pflake8",
     // "python.linting.flake8Args": [
         // incompatible with black: E203,W503,W504
-        // E203: Whitespace before ':'
-        // W503: Line break occurred before a binary operator
-        // W504: Line break occurred after a binary operator
-        // F401: import not used
-        // E231: space after "," (black: not exists, flake8: exists)
-        // "--ignore=E203,W503,W504,F401,E231,E501,E402,F841,E302,E305",
+        // "--ignore=E203,W503,W504,F401,E231,E501,E402,F841,E302,E305,E266",
         // "--max-line-length",
         // "88",
         // "--max-complexity=10"
