--- a/dot_vscode-server/private_data/private_Machine/settings.json
+++ b/dot_vscode-server/private_data/private_Machine/settings.json
@@ -45,5 +45,6 @@
         "editor.formatOnSave": true
     },
 
-    "python.analysis.typeCheckingMode": "basic"
+    "python.analysis.typeCheckingMode": "basic",
+    "editor.formatOnSave": true
 }
